0.9.32
 * Fixed crash when viewing tunnels
 * Fixed crash when viewing the addressbook
 * Fixed crash when configuring addressbook subscriptions

0.9.31 / 2017-08-19
 * Fixed various crashes in the Tunnels UI
 * Updated Firefox browser config instructions
 * Minor bug fixes
 * Dependency and translation updates

0.9.30 / 2017-05-20
 * Fixed crashes when creating or deleting tunnels, or adding names to the
   private addressbook
 * Minor bug fixes
 * Dependency and translation updates

0.9.29 / 2017-03-27
 * Dependency and translation updates

0.9.28 / 2017-01-02
 * Bug fixes and translation updates

0.9.27 / 2016-11-20 / 64ff68efe98c345acb6ba1d0432fa49d1d650358
 * Removed kytv's IRC server from default tunnel list
 * Translation updates

0.9.26 / 2016-06-13 / b003272c8b504bb0d904edca2e95359a57c9a52c
 * Fixed "I2CP already listening" bug
 * Fixed crash when adding tunnel to empty list
 * Translation updates

0.9.25 / 2016-04-17 / 46d45a878a2b73394b26ca27dbe6c696dedcf1c3
 * Fixed a bug on Samsung Android 4.2 devices
 * Dependency improvements
 * Translation updates

0.9.22 / 2015-10-10 / 0f73ef90b81e2cf3d55f0ea2b0a16e1f10da40ad
 * Updated browser config guide
 * Bug fixes and translation updates

0.9.20 / 2015-06-18 / 5fdaabeb5fa955caac90f1390adbdeaeae42fdf1
 * Simplified the main interface
 * Language can be configured
 * Tunnels can now be edited
 * Material design improvements
 * Better support for tablets
 * Improved graph rendering
 * Bug fixes and translation updates

0.9.19.1 / 2015-04-15 / ed86e7e85161dbe3f15932fd4d195c551f8e2c71
 * Fixed crash when opening advanced settings

0.9.19 / 2015-04-13 / 3cfb748946a5876dc06d5f81d811b142a88846f7
 * Made internal state handling more stable
 * Added graceful shutdown support
 * Updated libjbigi to use GMP 6.0.0
 * New libjbigi binary for armeabi-v7a to speed up newer devices
 * Improved logging
 * Bug fixes and translation updates

0.9.18 / 2015-03-04 / c2f4831a1617f4ce716a08640446fdd992c751ff